--- a/DentalResearchApp/DentalResearchApp/appsettings.json
+++ b/DentalResearchApp/DentalResearchApp/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "MongoConnection": {
+    "ConnectionString": "mongodb+srv://test:test@2018e21-surveydb-wtdmw.mongodb.net/test?retryWrites=true",
+    "Database": "SurveyDb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
