--- a/DentalResearchApp/DentalResearchApp/DentalResearchApp.csproj
+++ b/DentalResearchApp/DentalResearchApp/DentalResearchApp.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="bootstrap" Version="4.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="MongoDB.Driver" Version="2.7.0" />
   </ItemGroup>
