--- a/DentalResearchApp/DentalResearchApp/DentalResearchApp.csproj
+++ b/DentalResearchApp/DentalResearchApp/DentalResearchApp.csproj
@@ -9,7 +9,7 @@
     <Content Remove="Views\Survey\Editor.cshtml" />
     <Content Remove="Views\Survey\Index.cshtml" />
     <Content Remove="Views\Survey\Results.cshtml" />
-    <Content Remove="Views\Survey\Survey.cshtml" />
+    <Content Remove="Views\Survey\SurveyRunner.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -17,7 +17,7 @@
     <None Include="Views\Editor\Editor.cshtml" />
     <None Include="Views\Survey\Index.cshtml" />
     <None Include="Views\Survey\Results.cshtml" />
-    <None Include="Views\Survey\Survey.cshtml" />
+    <None Include="Views\SurveyRunner\SurveyRunner.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
