--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ dotnet: 2.1
 script:
 - dotnet restore
 after_success:
-- sudo ./push.sh
+- ./push.sh
 solution: DentalResearchApp.sln
 # deploy:
 #   provider: heroku
