--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ mono: none
 dotnet: 2.1
 script:
 - dotnet restore
+- dotnet test UnitTests/UnitTests.csproj
+- dotnet test IntegrationTests/IntegrationTests.csproj
 after_success:
 - chmod +x push.sh
 - ./push.sh
