Added context dependency injection. Refactor code to allow testing. Test project setup in progress.

--- a/DentalResearchApp/appsettings.json
+++ b/DentalResearchApp/appsettings.json
@@ -1,7 +1,7 @@
 {
   "MongoConnection": {
-    "ConnectionString": "mongodb+srv://test:test@2018e21-surveydb-wtdmw.mongodb.net/test?retryWrites=true",
-    "Database": "SurveyDb"
+    "Prod": "mongodb+srv://test:test@2018e21-surveydb-wtdmw.mongodb.net/test?retryWrites=true",
+    "Test":  "wat?" 
   },
   "Logging": {
     "LogLevel": {
