DET FUCKING VIRKER. DEN HÅNDTERER COOKIES!!!

--- a/DentalResearchApp/appsettings.json
+++ b/DentalResearchApp/appsettings.json
@@ -1,7 +1,6 @@
 {
   "MongoConnection": {
-    "Prod": "mongodb+srv://test:test@2018e21-surveydb-wtdmw.mongodb.net/test?retryWrites=true",
-    "Test":  "wat?" 
+    "ConnectionString": "mongodb+srv://test:test@2018e21-surveydb-wtdmw.mongodb.net/test?retryWrites=true",
   },
   "Logging": {
     "LogLevel": {
