Refactor code. Cleaned up. Added HttpClientWrapper

--- a/DentalResearchApp/appsettings.IntegrationTest.json
+++ b/DentalResearchApp/appsettings.IntegrationTest.json
@@ -1,5 +1,4 @@
 {
-  "MongoConnection": {
-    "ConnectionString": "yourmomgay - best regards inttest"
+  "I will be created dynamically": {
   }
 }
