--- a/DentalResearchApp/appsettings.Development.json
+++ b/DentalResearchApp/appsettings.Development.json
@@ -1,9 +1,18 @@
 {
+  "MongoConnection": {
+    "ConnectionString": "mongodb+srv://test:test@2018e21-surveydb-wtdmw.mongodb.net/test?retryWrites=true",
+    "UserDbName": "UserDb",
+    "SurveyDbName": "SurveyDb",
+    "LinkDbName": "LinkDb"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "Default": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "veryVerySecretKey",
+    "Issuer": "http://localhost:44378/"
   }
 }
