--- a/DentalResearchApp/appsettings.json
+++ b/DentalResearchApp/appsettings.json
@@ -1,7 +1,9 @@
 {
   "MongoConnection": {
     "ConnectionString": "mongodb+srv://test:test@2018e21-surveydb-wtdmw.mongodb.net/test?retryWrites=true",
-    "Database": "SurveyDb"
+    "UserDbName": "UserDb",
+    "SurveyDbName": "SurveyDb",
+    "LinkDbName": "LinkDb"
   },
   "Logging": {
     "LogLevel": {
