--- a/DentalResearchApp/DentalResearchApp.csproj
+++ b/DentalResearchApp/DentalResearchApp.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="4.1.3" />
+    <PackageReference Include="Csv" Version="1.0.35" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.5" />
     <PackageReference Include="MongoDB.Driver" Version="2.7.0" />
@@ -34,9 +35,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Update="appsettings.IntegrationTest.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Update="Views\Survey\Json\ProductFeedbackSurvey.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
