Modeller og videre arbejde på front-end

--- a/DentalResearchApp/appsettings.json
+++ b/DentalResearchApp/appsettings.json
@@ -3,7 +3,8 @@
     "ConnectionString": "mongodb+srv://test:test@2018e21-surveydb-wtdmw.mongodb.net/test?retryWrites=true",
     "UserDbName": "UserDb",
     "SurveyDbName": "SurveyDb",
-    "LinkDbName": "LinkDb"
+    "LinkDbName": "LinkDb",
+    "SessionDbName": "SessionDb" 
   },
   "Logging": {
     "LogLevel": {
