--- a/DentalResearchApp/DentalResearchApp.csproj
+++ b/DentalResearchApp/DentalResearchApp.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="4.1.3" />
     <PackageReference Include="Dapper" Version="1.50.5" />
+    <PackageReference Include="MailKit" Version="2.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.6" />
     <PackageReference Include="MongoDB.Driver" Version="2.7.2" />
